--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
     <version>3.15</version>
 </dependency>
   
+  <dependency>
+  <groupId>com.relevantcodes</groupId>
+  <artifactId>extentreports</artifactId>
+  <version>2.41.2</version>
+</dependency>
   
   </dependencies>
   <build>
